--- a/src/index.css
+++ b/src/index.css
@@ -316,7 +316,7 @@ input::placeholder {
     @apply md:text-xl text-lg md:font-semibold  font-medium text-grey;
   }
   .para {
-    @apply text-grey md:text-base sm:text-sm text-xs font-medium tracking-wide;
+    @apply text-grey md:text-base text-sm  md:font-medium font-normal tracking-wide;
   }
   .landing-pad-x {
     @apply lg:px-[30px] md:px-[25px] px-[20px];
