--- a/src/index.css
+++ b/src/index.css
@@ -289,7 +289,7 @@ input::placeholder {
     @apply border border-primary text-primary  placeholder-gray-600  md:text-lg  text-sm small-btn-border-radius focus:ring-primary focus:border-primary capitalize block w-full md:p-2.5 p-1 !leading-none;
   }
   .gig-btn {
-    @apply bg-black text-white   md:text-base md:font-bold font-semibold text-sm md:py-1 py-0.10 md:px-4 px-2 small-btn-border-radius  uppercase md:hover:bg-gray-800 shadow-none md:cursor-pointer cursor-none;
+    @apply bg-black text-white lg:text-base md:text-sm md:font-bold font-semibold text-xs md:py-1 py-0.10 md:px-[20px] px-[16px] small-btn-border-radius  uppercase md:hover:bg-gray-800 shadow-none md:cursor-pointer cursor-none;
   }
   .btn {
     @apply text-white md:text-base md:font-bold font-semibold text-sm md:py-1 py-0.10 md:px-4 px-1 small-btn-border-radius  uppercase flex items-center  md:cursor-pointer cursor-none;
