--- a/src/index.css
+++ b/src/index.css
@@ -213,7 +213,7 @@ input::placeholder {
     @apply lg:h-min-c-img-h md:h-md-min-c-img-h h-sm-min-c-img-h;
   }
   .card-text {
-    @apply text-grey md:text-base text-sm font-medium capitalize;
+    @apply text-grey md:text-base text-sm md:font-semibold font-medium capitalize;
   }
 
   .tag-text {
